packages/kit/test/apps/basics/src/routes/errors/load-error-string-server/+page.js
import { error } from '@sveltejs/kit/data';

/** @type {import('@sveltejs/kit').Load} */
export async function load() {
	throw error(555, 'Not found');
}
